--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -1,5 +1,13 @@
 a.card,
 .card{
+  position: relative;
+  margin-bottom:0;
+  h1 {
+    font-size: rem-calc(25);
+    margin: 0;
+    color:color(dark-gray);
+    word-break: break-word;
+  }
   &.program-card{
     border-bottom: none;
     h3, .h3 {
@@ -35,14 +43,6 @@ a.card,
         display: inline-block;
       }
     }
-  }
-  position: relative;
-  margin-bottom:0;
-  h1 {
-    font-size: rem-calc(25);
-    margin: 0;
-    color:color(dark-gray);
-    word-break: break-word;
   }
   &.card--list {
     @include xy-grid;
@@ -88,6 +88,16 @@ a.card,
   }
   &.card--calendar{
     border-bottom:5px solid map-get($post_content_types, calendar);
+  }
+  &.card--navigation{
+    background: transparent;
+    border-bottom: none;
+    i {
+      font-size: rem-calc(100);
+    }
+    h3{
+      font-size: rem-calc(30);
+    }
   }
   .post-meta{
     position: absolute;
@@ -178,18 +188,19 @@ a.card.sub-topic{
   margin-bottom: 4rem;
 }
 
-a.card.card--icon{
-  .icon-box{
+.icon-box{
+  width: 100%;
+  padding-top: 100%;
+  position: relative;
+  .icon-content {
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    .content {
-      position:absolute;
-      width:100%;
-      height:100%;
-    }
-    ::after{
-      content: "";
-      display:block;
-      padding-bottom: 100%;
-    }
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
