--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
@@ -17,6 +17,9 @@
   h6, .h6{
     font-size: rem-calc(15);
   }
+  .guide-name{
+    margin:0 0 0 130px;
+  }
 
   .intro-text{
     font-size: rem-calc(25);
