--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -162,3 +162,10 @@ caption {
   padding: 1rem;
   background: color(flyers-orange)
 }
+
+.footer-logos{
+  padding-top: 6rem;
+  img {
+    width: 50%;
+  }
+}
