--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
@@ -184,8 +184,44 @@
       }
     }
     .nav-container {
-      display: none;
-      // position: absolute;
+      display:none;
+      position: fixed;
+      margin:0;
+      top: 0;
+      bottom: 0;
+      z-index: 1000;
+      background-color: #F0F0F0;
+      overflow-y: scroll;
+
+      #guides-nav {
+        display: none;
+
+        ul {
+          margin: 0;
+          
+          li {
+            padding:.2rem;
+
+            a:first-child {
+              width: 100%;
+            }
+
+            ul {
+              padding-left: 2.5rem;
+               li {
+                border-bottom: solid 2px white;
+               }
+            }
+          }
+        }
+
+        #home-nav {
+          display: flex;
+          justify-content: space-between;
+
+        }
+        
+      }
     }
 
     
@@ -263,19 +299,27 @@
       position: sticky;
       top: 0;
       background-color: whitesmoke;
-      z-index: 1000;
+      z-index: 500;
       box-shadow: 0 4px 2px -2px gray;
-      padding: 5px 0px 5px 0px;
+      padding: 5px 3px 5px 3px;
       text-align: center;
       margin-bottom: 10px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
   
-      h1 {
-          font-size: 2.4rem;
+      h1, .caret-icon {
+          font-size: 2.2rem;
           color: color(dark-ben-franklin);
           font-weight: 600;
-
-        
       }
+
+      .caret-icon {
+        display:flex;
+        align-items: center;
+      }
+     
     }
 
     .guide-content {
