mobile menu css updates, stop body scroll when menu is open

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
@@ -199,6 +199,11 @@
       #guides-nav {
         display: none;
 
+        .title-link {
+          border-bottom: solid 2px white;
+          
+        }
+
         ul {
           margin: 0;
           
