--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
@@ -45,21 +45,21 @@
     }
   }
 
-  @include breakpoint (medium) {
-  .show-all-on-desktop {
-    height: 100%;
-  .intro-text {
-    font-size: rem-calc(25);
-    line-height: 1.8rem;
-    // margin-bottom: 5rem;
-    p {
-      margin-bottom: 3rem;
+  @include breakpoint(medium) {
+    .show-all-on-desktop {
+      height: 100%;
+      .intro-text {
+        font-size: rem-calc(25);
+        line-height: 1.8rem;
+        // margin-bottom: 5rem;
+        p {
+          margin-bottom: 3rem;
+        }
+      }
     }
-  }
-}
-.more-button {
-  display: none;
-}
+    .more-button {
+      display: none;
+    }
   }
 
   .intro-button {
@@ -88,7 +88,7 @@
   #guide-hero {
     z-index: 1000;
   }
-  
+
   .shrink {
     .hero-full .hero-full--container .grid-container {
       height: 7rem;
@@ -158,7 +158,6 @@
   }
 
   @include breakpoint(small only) {
-
     .mobile-no-bottom-margin {
       margin-bottom: 0;
     }
@@ -167,7 +166,7 @@
       margin-top: 0;
     }
 
-    .hero-full--container{
+    .hero-full--container {
       margin: 0;
     }
 
@@ -194,38 +193,36 @@
         margin: 0;
       }
     }
-    
+
     .nav-container {
       display: none;
       position: fixed;
-      margin:0;
+      margin: 0;
       top: 0;
       bottom: 0;
       z-index: 1000;
-      background-color: #F0F0F0;
+      background-color: #f0f0f0;
       overflow-y: scroll;
       padding: 10px;
-     
 
       #guides-nav {
         display: none;
         border: none;
         overflow-y: none;
-        
+
         #nav-menu-caret {
-          color:color(dark-ben-franklin);
+          color: color(dark-ben-franklin);
         }
 
         .title-link {
           border-bottom: solid 2px white;
-          
         }
 
         ul {
           margin: 0;
-          
+
           li {
-            padding:.2rem;
+            padding: 0.2rem;
 
             a:first-child {
               width: 100%;
@@ -233,9 +230,9 @@
 
             ul {
               padding-left: 2.5rem;
-               li {
+              li {
                 border-bottom: solid 2px white;
-               }
+              }
             }
           }
         }
@@ -243,44 +240,33 @@
         #home-nav {
           display: flex;
           justify-content: space-between;
-
         }
-        
       }
     }
 
-   .show-all-on-desktop {
+    .show-all-on-desktop {
       min-height: 200px;
-   
-      .intro-text {
 
-    
-      font-size: 1rem;
-      line-height: 1rem;
-      margin-bottom: 0;
-      p {
-        margin-bottom: 1rem;
+      .intro-text {
+        font-size: 1rem;
+        line-height: 1rem;
+        margin-bottom: 0;
+        p {
+          margin-bottom: 1rem;
+        }
       }
     }
-  }
 
-  .more-button {
-    margin-left: auto;
-  }
+    .more-button {
+      margin-left: auto;
+    }
 
-    // #guides-intro-text {
-  
-    //   height: 100px;
-    //   overflow: hidden;
-      
-    // }
-
-    // .intro-button {
-    //   float: right;
-    //   display: block;
-    //   margin-top: 5px;
-    //   transition-timing-function: ease;
-    // }
+    :target:before {
+      content: "";
+      display: block;
+      height: 70px; /* fixed header height*/
+      margin: -70px 0 0; /* negative fixed header height */
+    }
 
     .guide-page-title {
       margin-bottom: 0px;
@@ -293,7 +279,6 @@
     }
 
     .page-title {
-
       h2 {
         font-size: 1.75rem;
         font-weight: 400;
@@ -325,8 +310,7 @@
           }
         }
       }
-  }
-
+    }
 
     .page-title-button {
       word-break: normal;
@@ -342,52 +326,51 @@
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-  
-      h1, .caret-icon {
-          font-size: 2.2rem;
-          color: color(dark-ben-franklin);
-          font-weight: 600;
+
+      h1,
+      .caret-icon {
+        font-size: 2.2rem;
+        color: color(dark-ben-franklin);
+        font-weight: 600;
       }
 
       .caret-icon {
-        display:flex;
+        display: flex;
         align-items: center;
       }
-     
     }
 
     .guide-content {
       .page-title-group {
         display: none;
       }
-        h1,
-        .h1 {
-          font-size: rem-calc(30);
-        }
-        h2,
-        .h2 {
-          font-size: rem-calc(25);
-          font-weight: 600;
-        }
-        h3,
-        .h3 {
-          font-size: rem-calc(20);
-          // font-weight: bold;
-        }
-        h4,
-        .h4 {
-          font-size: rem-calc(15);
-        }
-        h5,
-        .h5 {
-          font-size: rem-calc(10);
-        }
-        h6,
-        .h6 {
-          font-size: rem-calc(10);
-        }
+      h1,
+      .h1 {
+        font-size: rem-calc(30);
       }
-    
+      h2,
+      .h2 {
+        font-size: rem-calc(25);
+        font-weight: 600;
+      }
+      h3,
+      .h3 {
+        font-size: rem-calc(20);
+        // font-weight: bold;
+      }
+      h4,
+      .h4 {
+        font-size: rem-calc(15);
+      }
+      h5,
+      .h5 {
+        font-size: rem-calc(10);
+      }
+      h6,
+      .h6 {
+        font-size: rem-calc(10);
+      }
+    }
   }
 }
 
