Adjust related content section

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -173,3 +173,7 @@ caption {
 #google_translate_element .goog-te-gadget-simple span {
   vertical-align: middle !important; 
 }
+
+.step-group .step:last-of-type{
+  padding-bottom: 0;
+}
