--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -177,3 +177,10 @@ caption {
 .step-group .step:last-of-type{
   padding-bottom: 0;
 }
+
+.last-updated{
+  .last-updated-text{
+    border-top: 1px solid #444;
+    display: inline-block;
+  }
+}
