Repurpose a-z-list functionality and apply to faq search

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_expandable.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_expandable.scss
@@ -37,6 +37,9 @@
     background: color(ghost-gray);
     padding: 2rem;
   }
+  &.is-hidden + .icon-expand-hr {
+    display:none;
+  }
 }
 hr.icon-expand-hr{
   margin: 3rem 0 2rem 0 !important;
