Adjust photo credit for program pages

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/modules/_hero-half.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/modules/_hero-half.scss
@@ -23,6 +23,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 400px;
+    position: relative;
   }
   .photo-credit {
     display:none;
