--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -29,6 +29,7 @@
 @import 'social-media';
 @import 'sticky-nav';
 @import 'table';
+@import 'translations';
 @import 'pagination';
 @import 'alerts';
 
