--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_things-to-do.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_things-to-do.scss
@@ -17,22 +17,43 @@
         }
     
         @media screen and (min-width: 40em) and (max-width: 63.9375em) {
-            padding:0 10px;
+            padding: 0 10px;
         }
     }
     &.callout-photo-toggle-false {
         background: none;
         border-top: solid 1px black;
         border-bottom: solid 1px black;
+        @media screen and (max-width: 749px) {
+            padding: 0px;
+        }
         .cell {
             width: 100%;
-        }
-        .valign {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto;
-            justify-content: space-between;
-            align-items: center;
+            @media screen and (max-width: 749px) {
+                margin-top: 1rem;
+            }
+
+            .valign {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: auto;
+                justify-content: space-between;
+                align-items: center;
+                @media screen and (max-width: 749px) {
+                    grid-template-columns: 1fr;
+                    justify-content: center;
+                }
+                .fa-3x {
+                    @media screen and (max-width: 749px) {
+                        display: none;
+                    }
+                }
+                .photo-callout-block__txt-btn {
+                    @media screen and (max-width: 749px) {
+                        margin: 0.92857rem auto;
+                    }
+                }
+            }
         }
     }
 }
