successful pivot to npm fa

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -1,6 +1,7 @@
 @import 'phila-standards';
 
 @import 'base/global-nav';
+@import 'base/font-awesome';
 @import 'mixins';
 @import 'sass-maps';
 @import 'layout';
