modal opens on load

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -23,6 +23,7 @@
 @import 'lightbox';
 @import 'location-list';
 @import 'maps';
+@import 'modal';
 @import 'panel';
 @import 'resource-list';
 @import 'search';
