--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_modal.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_modal.scss
@@ -4,8 +4,10 @@
     }
     .button-text {
         bottom: 20px;
-        right: 25px;
-        width: fit-content;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
         position: absolute;
     }
 }
