Adjust styles and add underlines to links

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -2,6 +2,7 @@
 
 @import 'base/global-nav';
 @import 'base/font-awesome';
+@import 'base/override';
 @import 'mixins';
 @import 'sass-maps';
 @import 'layout';
