--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_translations.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_translations.scss
@@ -5,3 +5,24 @@
     text-decoration: underline;
   }
 }
+.translated-headings {
+  h1{
+    display: inline;
+  }
+  a:link, a:visited, a:active, a:hover{
+    text-decoration: underline;
+  }
+  .translated-list {
+    list-style-type: none;
+    display: inline;
+    margin:0;
+    li{
+      display: inline;
+      border-right: 1px solid #444;
+      padding: 0 1rem;
+      &:last-of-type{
+        border-right:none;
+      }
+    }
+  }
+}
