--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -231,6 +231,12 @@ a.card.sub-topic{
 .post-grid {
   .faux-card {
     border-bottom:1px solid #cfcfcf;
+    .fas {
+      margin-left: auto;
+      margin-right: auto;
+      width: fit-content;
+      display: block;
+    }
   }
 }
 
@@ -250,6 +256,12 @@ a.card.sub-topic{
         font-size: 14px;
         margin-bottom: 1rem;
         line-height: 1.8rem;
+      }
+      .far {
+        margin-left: auto;
+        margin-right: auto;
+        width: fit-content;
+        display: block;
       }
     }
   }
