cleaned up code

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -270,11 +270,14 @@ a.card.sub-topic{
         width: fit-content;
         display: block;
       }
+      &.card--last {
+        border-bottom: none !important;
+      }
     }
   }
   .card--last {
     .card {
-      border-bottom:none !important;
+      border-bottom: none !important;
     }
   }
 }
