--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_calendar.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_calendar.scss
@@ -105,6 +105,7 @@ ul.simcal-events{
           line-height: 18px;
       }
       &:hover {
+        cursor: pointer;
         opacity: .5;
       }
     }
