Adjust mobile styles

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -245,6 +245,9 @@ a.card.sub-topic{
       &.card--last {
         border-bottom:none !important;
       }
+      .cell{
+        margin-bottom:0;
+      }
     }
   }
 }
