--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_guides.scss
@@ -210,6 +210,7 @@
             margin: 0 auto;
             h1 {
               font-size: 3rem;
+              line-height: 2.7rem;
               margin: 0 auto;
             }
           }
